# zohaib-portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  resume.md
.github/: pull_request_template.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/content/: profile.json  projects.json  skills.json
backend/app/db/: models.py  session.py
backend/app/routers/: certifications.py  contact.py  experience.py  health.py  profile.py  projects.py  resume.py  skills.py
backend/app/schemas/: certification.py  common.py  contact.py  experience.py  profile.py  project.py  skill.py
backend/app/services/: analytics.py  content.py  email.py  spam.py
backend/app/tests/: conftest.py  test_contact.py  test_content.py  test_experience.py  test_profile.py  test_projects.py  test_resume.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  content.ts  index.css
frontend/src/components/: TimeZoneBridge.tsx
frontend/src/components/layout/: Container.tsx  Footer.tsx  Navbar.tsx  SideNav.tsx  ThemeToggle.tsx  TopNav.tsx
frontend/src/data/: experience.json  index.ts  profile.json  projects.json  skills.json
frontend/src/hooks/: ThemeProvider.tsx  theme-context.ts  useLahoreTime.ts  useResource.ts  useScrollReveal.ts  useScrollSpy.ts  useTheme.ts
frontend/src/lib/: socialIcons.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/services/: apiClient.ts  contactForm.ts  endpoints.ts
frontend/src/types/: certification.ts  contact.ts  experience.ts  index.ts  profile.ts  project.ts
(+12 files in other folders)
